ImageHijackCanvas should skip non-lazy images from SkImageShader

ImageHijack canvas can currently hit a DCHECK when we try to process
images from SkImageShaders, as it handles them even if they are
non-lazy. Non-lazy images should be skipped.

BUG=673981
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2572783005
Cr-Commit-Position: refs/heads/master@{#438650}

Former-commit-id: d0cdd34fa6a729f4366e69b13a382c4f1943f3fd